--- a/app/index.html
+++ b/app/index.html
@@ -19,12 +19,15 @@
     <div class="container" ng-view></div>
 
     <script src="components/angular/angular.js"></script>
+    <script src="components/angular-local-storage.js"></script>
     <script src="https://cdn.firebase.com/v0/firebase.js"></script>
     <script src="assets/angularFire.js"></script>
 
     <!-- build:js scripts/scripts.js -->
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/main.js"></script>
+    <script src="scripts/services/token_handler.js"></script>
+    <script src="scripts/services/james.js"></script>
     <!-- endbuild -->
 
   </body>
